--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.11.3",
     "@next/font": "13.1.1",
     "@tanstack/react-query": "^4.20.9",
+    "@types/http-proxy": "^1.17.9",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -27,6 +28,7 @@
     "axios": "^1.2.2",
     "eslint": "8.31.0",
     "eslint-config-next": "^12.0.4",
+    "http-proxy": "^1.18.1",
     "lodash": "^4.17.21",
     "next": "13.1.1",
     "re-resizable": "^6.9.9",
